# mlir-hs

./: CHANGELOG.md  Setup.hs  configure  mlir-hs.cabal
cbit/: .clangd  callback.c  wrapper.c  wrapper.h
cbits/Dialect/: arith.cpp  gpu.cpp
cbits/FFI/: IR.c  builtinAttributes.c  builtinTypes.c
cpphs/: typemap.h
src/: MLIR.hs  Tablegen.hs
src/MLIR/: AutogenUtils.hs  BuiltinAttributes.hs  BuiltinTypes.hs  IR.hs  TH.hs
src/MLIR/C/: AffineMap.hs  BuiltinAttributes.hs  BuiltinTypes.hs  IR.hs
src/MLIR/Dialect/: Arith.hs  Async.hs  ControlFlow.hs  Func.chs  Func.hs  GPU.hs  LLVM.hs  Linalg.hs  MLProgram.hs  Math.hs  MemRef.hs  PDL.hs  Quant.hs  SCF.hs  Shape.hs  SparseTensor.hs  Tensor.hs  Transform.hs  Vector.hs
src/MLIR/Dialect/Arith/: Attributes.hs
src/MLIR/Dialect/Func/: Extra.chs
src/MLIR/Dialect/GPU/: Attributes.hs
src/MLIR/Dialect/LLVM/: Attributes.hs  Extra.chs
src/MLIR/Dialect/Linalg/: Attributes.hs
src/MLIR/Dialect/MemRef/: Attributes.hs
src/MLIR/Dialect/PDL/: Extra.chs
src/MLIR/FFI/: AffineExpr.chs  AffineMap.chs  BuiltinAttributes.chs  BuiltinTypes.chs  Finalizers.hs  IR.chs  IntegerSet.chs  Interfaces.chs  Marshal.hs  Support.chs
test/: ArithTest.hs  AsyncTest.hs  BytecodeTest.hs  ControlFlowTest.hs  Dummy.hs  FuncTest.hs  GPUTest.hs  LLVMTest.hs  LinalgTest.hs  MLIR.hs  MLProgramTest.hs  Main.hs  MathTest.hs  MemRefTest.hs  PDLTest.hs  QuantTest.hs  SCFTest.hs  ShapeTest.hs  SparseTensorTest.hs  TensorTest.hs  TransformTest.hs  VectorTest.hs
